--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -15,6 +15,7 @@
     "hono": "^3.11.8",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "mongoose": "^8.0.3",
     "qs": "^6.11.2",
     "zod": "^3.22.4"
   },
