--- a/packages/wecharge/.gitignore
+++ b/packages/wecharge/.gitignore
@@ -39,6 +39,7 @@ local.properties
 node_modules/
 npm-debug.log
 yarn-error.log
+.expo/
 
 # fastlane
 #
@@ -62,5 +63,10 @@ yarn-error.log
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
 
-# testing
-/coverage
+/**/*/google-services.json
+
+
+.env
+.env.*
+
+!.env.example
