--- a/packages/wecharge/package.json
+++ b/packages/wecharge/package.json
@@ -10,17 +10,40 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
+    "@rneui/base": "^4.0.0-rc.8",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "axios": "^1.6.2",
+    "dayjs": "^1.11.10",
+    "formik": "^2.4.5",
+    "lodash-es": "^4.17.21",
     "react": "18.2.0",
-    "react-native": "0.73.0"
+    "react-native": "0.73.0",
+    "react-native-config": "^1.5.1",
+    "react-native-date-picker": "^4.3.4",
+    "react-native-element-dropdown": "^2.10.1",
+    "react-native-gesture-handler": "^2.14.0",
+    "react-native-mask-input": "^1.2.3",
+    "react-native-safe-area-context": "^4.8.1",
+    "react-native-screens": "^3.29.0",
+    "react-native-size-matters": "^0.4.2",
+    "react-native-vector-icons": "^10.0.3",
+    "zod": "^3.22.4",
+    "zod-formik-adapter": "^1.2.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-transform-export-namespace-from": "^7.23.4",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native/babel-preset": "^0.73.18",
     "@react-native/eslint-config": "^0.73.1",
     "@react-native/metro-config": "^0.73.2",
     "@react-native/typescript-config": "^0.73.1",
+    "@types/lodash-es": "^4.17.12",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
