--- a/packages/wecharge/package.json
+++ b/packages/wecharge/package.json
@@ -16,8 +16,10 @@
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.6.2",
+    "base-64": "^1.0.0",
     "dayjs": "^1.11.10",
     "formik": "^2.4.5",
+    "jwt-decode": "^4.0.0",
     "lodash-es": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.73.0",
@@ -43,6 +45,7 @@
     "@react-native/eslint-config": "^0.73.1",
     "@react-native/metro-config": "^0.73.2",
     "@react-native/typescript-config": "^0.73.1",
+    "@types/base-64": "^1.0.2",
     "@types/lodash-es": "^4.17.12",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
