--- a/packages/wecharge/package.json
+++ b/packages/wecharge/package.json
@@ -31,6 +31,7 @@
     "react-native-safe-area-context": "^4.8.1",
     "react-native-screens": "^3.29.0",
     "react-native-size-matters": "^0.4.2",
+    "react-native-svg": "^14.1.0",
     "react-native-vector-icons": "^10.0.3",
     "zod": "^3.22.4",
     "zod-formik-adapter": "^1.2.0",
