--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.0.3",
+    "omise": "^0.12.0",
     "qs": "^6.11.2",
     "zod": "^3.22.4"
   },
